[package]
name = "atomsidao"
version = "0.1.0"
edition = "2021"
description = "A framework for building decentralized autonomous organizations"
authors = ["AtomSi DAO Team"]
license = "MIT"
repository = "https://github.com/atomsidao/atomsidao"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.17"
derive_more = "0.99"
rust_decimal = { version = "1.30", features = ["serde-with-str"] }
rust_decimal_macros = "1.30"

# Crypto dependencies
ed25519-dalek = "2.0"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "macros", "json", "chrono", "uuid"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7"

# Web dependencies
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.6", features = ["headers", "multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "compression-br", "compression-gzip", "fs", "timeout"] }
hyper = "0.14"
http = "0.2"
mime = "0.3"

# Web3 dependencies
ethers = { version = "2.0.8", features = ["legacy"] }
web3 = "0.19"

# CLI dependencies
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10"
console = "0.15"
indicatif = "0.17"

# Configuration dependencies
config = "0.13"
dotenv = "0.15"

# API documentation
utoipa = { version = "3.4", features = ["axum_extras", "chrono", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }

[dev-dependencies]
mockall = "0.11"
tempfile = "3.5"
test-log = "0.2"
pretty_assertions = "1.3"
rand_chacha = "0.3"

[features]
default = ["postgres"]
postgres = []
sqlite = []
test-utils = []

[[bin]]
name = "atomsidao"
path = "src/main.rs"

[lib]
name = "atomsidao"
path = "src/lib.rs" 